--- a/sub_shop_all.html
+++ b/sub_shop_all.html
@@ -90,7 +90,7 @@
             <div class="solvir_pbox">
                 <div class="solvir_img_box">
                     <img src="./sub_shop_all/products/solvir_1.png" alt="solvir1" class="solvir_1">
-                    <a href="#none" class="solvir_11"><img src="./sub_shop_all/products/solvir_11.png"
+                    <a href="./sub_shop_detail.html" class="solvir_11"><img src="./sub_shop_all/products/solvir_11.png"
                             alt="solvir11"></a>
                 </div> <!--solvir_img_box-->
 
@@ -144,7 +144,7 @@
             <div class="neuter_pbox">
                 <div class="neuter_img_box">
                     <img src="./sub_shop_all/products/neuter_1.png" alt="neuter1" class="neuter_1">
-                    <a href="#none" class="neuter_11"><img src="./sub_shop_all/products/neuter_11.png"
+                    <a href="./sub_shop_detail.html" class="neuter_11"><img src="./sub_shop_all/products/neuter_11.png"
                             alt="neuter11"></a>
                 </div>
                 <div class="left_text_box">
@@ -181,7 +181,7 @@
             <div class="solvir_hbox">
                 <div class="solvir_img_hbox">
                     <img src="./sub_shop_all/products/solvir_2.png" alt="solvir2" class="solvir_2">
-                    <a href="#none" class="solvir_22"><img src="./sub_shop_all/products/solvir_22.png"
+                    <a href="./sub_shop_detail.html" class="solvir_22"><img src="./sub_shop_all/products/solvir_22.png"
                             alt="solvir22"></a>
                 </div> <!--solvir_img_box-->
 
@@ -208,7 +208,7 @@
             <div class="sichel_hbox">
                 <div class="sichel_img_hbox">
                     <img src="./sub_shop_all/products/sichel_2.png" alt="sichel2" class="sichel_2">
-                    <a href="#none" class="sichel_22"><img src="./sub_shop_all/products/sichel_22.png"
+                    <a href="./sub_shop_detail.html" class="sichel_22"><img src="./sub_shop_all/products/sichel_22.png"
                             alt="sichel22"></a>
                 </div>
                 <div class="right_text_hbox">
@@ -234,7 +234,7 @@
             <div class="neuter_hbox">
                 <div class="neuter_img_hbox">
                     <img src="./sub_shop_all/products/neuter_2.png" alt="neuter2" class="neuter_2">
-                    <a href="#none" class="neuter_22"><img src="./sub_shop_all/products/neuter_22.png"
+                    <a href="./sub_shop_detail.html" class="neuter_22"><img src="./sub_shop_all/products/neuter_22.png"
                             alt="neuter22"></a>
                 </div>
                 <div class="right_text_hbox">
@@ -272,7 +272,7 @@
             <div class="solvir_bbox">
                 <div class="solvir_img_bbox">
                     <img src="./sub_shop_all/products/solvir_3.png" alt="solvir3" class="solvir_3">
-                    <a href="#none" class="solvir_33"><img src="./sub_shop_all/products/solvir_33.png"
+                    <a href="./sub_shop_detail.html" class="solvir_33"><img src="./sub_shop_all/products/solvir_33.png"
                             alt="solvir33"></a>
                 </div> <!--solvir_img_bbox-->
 
@@ -299,7 +299,7 @@
             <div class="sichel_bbox">
                 <div class="sichel_img_bbox">
                     <img src="./sub_shop_all/products/sichel_3.png" alt="sichel3" class="sichel_3">
-                    <a href="#none" class="sichel_33"><img src="./sub_shop_all/products/sichel_33.png"
+                    <a href="./sub_shop_detail.html" class="sichel_33"><img src="./sub_shop_all/products/sichel_33.png"
                             alt="sichel33"></a>
                 </div>
                 <div class="left_text_box">
@@ -325,7 +325,7 @@
             <div class="neuter_bbox">
                 <div class="neuter_img_bbox">
                     <img src="./sub_shop_all/products/neuter_3.png" alt="neuter3" class="neuter_3">
-                    <a href="#none" class="neuter_33"><img src="./sub_shop_all/products/neuter_33.png"
+                    <a href="./sub_shop_detail.html" class="neuter_33"><img src="./sub_shop_all/products/neuter_33.png"
                             alt="neuter33"></a>
                 </div>
                 <div class="left_text_box">
@@ -355,7 +355,7 @@
             <div class="solvir_bbox">
                 <div class="solvir_img_bbox">
                     <img src="./sub_shop_all/products/solvir_4.png" alt="solvir4" class="solvir_4">
-                    <a href="#none" class="solvir_44"><img src="./sub_shop_all/products/solvir_44.png"
+                    <a href="./sub_shop_detail.html" class="solvir_44"><img src="./sub_shop_all/products/solvir_44.png"
                             alt="solvir44"></a>
                 </div> <!--solvir_img_bbox-->
 
@@ -382,7 +382,7 @@
             <div class="sichel_bbox">
                 <div class="sichel_img_bbox">
                     <img src="./sub_shop_all/products/sichel_4.png" alt="sichel4" class="sichel_4">
-                    <a href="#none" class="sichel_44"><img src="./sub_shop_all/products/sichel_44.png"
+                    <a href="./sub_shop_detail.html" class="sichel_44"><img src="./sub_shop_all/products/sichel_44.png"
                             alt="sichel44"></a>
                 </div>
                 <div class="left_text_box">
@@ -408,7 +408,7 @@
             <div class="neuter_bbox">
                 <div class="neuter_img_bbox">
                     <img src="./sub_shop_all/products/neuter_4.png" alt="neuter4" class="neuter_4">
-                    <a href="#none" class="neuter_44"><img src="./sub_shop_all/products/neuter_44.png"
+                    <a href="./sub_shop_detail.html" class="neuter_44"><img src="./sub_shop_all/products/neuter_44.png"
                             alt="neuter44"></a>
                 </div>
                 <div class="left_text_box">
@@ -438,7 +438,7 @@
             <div class="solvir_bbox">
                 <div class="solvir_img_bbox">
                     <img src="./sub_shop_all/products/solvir_5.png" alt="solvir5" class="solvir_5">
-                    <a href="#none" class="solvir_55"><img src="./sub_shop_all/products/solvir_55.png"
+                    <a href="./sub_shop_detail.html" class="solvir_55"><img src="./sub_shop_all/products/solvir_55.png"
                             alt="solvir55"></a>
                 </div> <!--solvir_img_bbox-->
 
@@ -465,7 +465,7 @@
             <div class="sichel_bbox">
                 <div class="sichel_img_bbox">
                     <img src="./sub_shop_all/products/sichel_5.png" alt="sichel4" class="sichel_5">
-                    <a href="#none" class="sichel_55"><img src="./sub_shop_all/products/sichel_55.png"
+                    <a href="./sub_shop_detail.html" class="sichel_55"><img src="./sub_shop_all/products/sichel_55.png"
                             alt="sichel55"></a>
                 </div>
                 <div class="left_text_box">
@@ -491,7 +491,7 @@
             <div class="neuter_bbox">
                 <div class="neuter_img_bbox">
                     <img src="./sub_shop_all/products/neuter_5.png" alt="neuter5" class="neuter_5">
-                    <a href="#none" class="neuter_55"><img src="./sub_shop_all/products/neuter_55.png"
+                    <a href="./sub_shop_detail.html" class="neuter_55"><img src="./sub_shop_all/products/neuter_55.png"
                             alt="neuter55"></a>
                 </div>
                 <div class="left_text_box">
