--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide"><a href="./sub_shop_detail.html"><img src="./index/products/main_sichel.png"
                             alt="main_sichel"></a></div>
-                <div class="swiper-slide"><a href="#none"><img src="./index/products/main_solvir.png"
+                <div class="swiper-slide"><a href="./sub_shop_detail.html"><img src="./index/products/main_solvir.png"
                             alt="main_sichel"></a></div>
                 <div class="swiper-slide">
-                    <a href="#none"><img src="./index/products/main_neuter.png" alt="main_sichel"></a>
+                    <a href="./sub_shop_detail.html"><img src="./index/products/main_neuter.png" alt="main_sichel"></a>
                 </div>
             </div>
             <!--화살표추가-->
