--- a/index.html
+++ b/index.html
@@ -216,11 +216,13 @@
                     <div class="button_box">
                         <div class="buy_box">
                             <img src="./index/images/buy.png" alt="buy">
-                            <a href="#none" class="buy_1"><img src="./index/images/buy_1.png" alt="buy_1"></a>
+                            <a href="./sub_shop_detail.html" class="buy_1"><img src="./index/images/buy_1.png"
+                                    alt="buy_1"></a>
                         </div>
                         <div class="more_box">
                             <img src="./index/images/more.png" alt="more">
-                            <a href="#none" class="more_1"><img src="./index/images/more_1.png" alt="more_1"></a>
+                            <a href="./sub_shop_detail.html" class="more_1"><img src="./index/images/more_1.png"
+                                    alt="more_1"></a>
                         </div>
                     </div>
                 </div>
@@ -238,11 +240,13 @@
                     <div class="button_box">
                         <div class="buy_box">
                             <img src="./index/images/buy.png" alt="buy">
-                            <a href="#none" class="buy_1"><img src="./index/images/buy_1.png" alt="buy_1"></a>
+                            <a href="./sub_shop_detail.html" class="buy_1"><img src="./index/images/buy_1.png"
+                                    alt="buy_1"></a>
                         </div>
                         <div class="more_box">
                             <img src="./index/images/more.png" alt="more">
-                            <a href="#none" class="more_1"><img src="./index/images/more_1.png" alt="more_1"></a>
+                            <a href="./sub_shop_detail.html" class="more_1"><img src="./index/images/more_1.png"
+                                    alt="more_1"></a>
                         </div>
                     </div>
                 </div>
@@ -260,7 +264,7 @@
             </div>
             <div class="main_event_2" data-aos="fade-down" data-aos-easing="ease-out-back" data-aos-duration="3500"
                 data-aos-delay="250">
-                <a href="./sub_event.html/"><img src="./index/images/main_event_2.png" alt="main_event_2"></a>
+                <a href="./sub_event.html"><img src="./index/images/main_event_2.png" alt="main_event_2"></a>
             </div>
         </div>
     </div>
