--- a/sub_brand.html
+++ b/sub_brand.html
@@ -71,7 +71,7 @@
 
 <!-- brand_video -->
 <div id="brand_video">
-    <video src="./sub_brand/videoes/video (2).mp4" autoplay loop muted width="100%"></video>
+    <video src="./sub_brand/videoes/video (2).mp4" autoplay loop muted playsinline width="100%"></video>
 </div>
 
 <div id="brand_container1"> <!-- position:relative; 넣어줄 박스 -->
