--- a/sub_event.html
+++ b/sub_event.html
@@ -100,7 +100,7 @@
     <div id="perfumestoryevent">
         <div class="perfumestoryevent_box">
             <h1 data-aos="fade" data-aos-duration="2500">PERFUME STORY EACH PERSON</h1>
-            <h2 data-aos="fade" data-aos-duration="2500" data-aos-delay="150">당신이 사로잡혔던 순간 그떄의 향기,</h2>
+            <h2 data-aos="fade" data-aos-duration="2500" data-aos-delay="150">당신이 사로잡혔던 순간 그때의 향기,</h2>
             <h3 data-aos="fade" data-aos-duration="2500" data-aos-delay="220">그 추억을 이야기하다.</h3>
             <h4 data-aos="fade" data-aos-duration="2500" data-aos-delay="250"><a
                     href="./sub_event_perfumestory.html">SEND</a></h4>
